--- a/src/frontend/setup/setup.html
+++ b/src/frontend/setup/setup.html
@@ -39,7 +39,7 @@
         <h1>表示位置</h1>
         <p>表示したい位置を設定してください</p>
       </div>
-        <img src="./gamen.png" id="gamen_png">
+        <!-- <img src="./gamen.png" id="gamen_png"> -->
         <div class='td_list'>
           <p>X軸</p>
           <input type="number" id="inputxnum" max="1920" min="1" value="380"style="text-align:right">
