refactor weather.js

--- a/src/frontend/weather/weather.html
+++ b/src/frontend/weather/weather.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>TV weather</title>
-  <link rel="stylesheet" href="tenkiloop.css">
+  <link rel="stylesheet" href="weather.css">
   <script src="jquery-3.5.1.min.js"></script>
-  <script src="program.js"></script>
+  <script src="weather.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet">
