--- a/src/frontend/setup/setup.html
+++ b/src/frontend/setup/setup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>TV weather</title>
   <link rel="stylesheet" href="setup.css">
-  <link rel="stylesheet" href="../tenki/tenkiloop.css">
+  <link rel="stylesheet" href="../weather/weather.css">
   <script src="jquery-3.5.1.min.js"></script>
   <script src="setup.js"></script>
 </head>
