--- a/src/frontend/setup/setup.html
+++ b/src/frontend/setup/setup.html
@@ -100,13 +100,13 @@
         <p>天気ループの表示・非表示の時間を設定してください</p>
       </div>
       <div class="td_list timerContents">
-        <p>表示時間（HH:MM）</p>
-        <input type="text" id="showTimeInput" value="08:00" style="width:80px; text-align:right; font-size: 20px; margin: 10px;">
+        <p>表示時間（HH:MM:SS）</p>
+        <input type="text" id="showTimeInput" value="08:00:01" style="width:80px; text-align:right; font-size: 20px; margin: 10px;">
         <input id="addStartTimerCheck" type="button" value="追加"/>
       </div>
       <div class="td_list timerContents">
-        <p>非表示時間（HH:MM）</p>
-        <input type="text" id="hideTimeInput" value="20:00" style="width:80px; text-align:right; font-size: 20px; margin: 10px;">
+        <p>非表示時間（HH:MM:SS）</p>
+        <input type="text" id="hideTimeInput" value="20:00:30" style="width:80px; text-align:right; font-size: 20px; margin: 10px;">
         <input id="addStopTimerCheck" type="button" value="追加"/>
       </div>
       <div id="timerListArea">
