--- a/src/frontend/setup/setup.html
+++ b/src/frontend/setup/setup.html
@@ -50,7 +50,7 @@
     <!-- 表示位置設定 -->
     <div class="detailesAreaContents" id="ichiAreaContents">
       <div id="topArea">
-        <h1>表示位置</h1>
+        <h1>位置</h1>
         <p>表示したい位置を設定してください</p>
       </div>
       <div class='td_list'>
@@ -69,7 +69,7 @@
     <!-- ディスプレイ選択 -->
     <div class="detailesAreaContents" id="displayAreaContents">
       <div id="topArea">
-        <h1>ディスプレイ選択</h1>
+        <h1>ディスプレイ</h1>
         <p>天気ループを表示するディスプレイを選択してください</p>
       </div>
       <div id="displayCardArea">
@@ -82,7 +82,7 @@
     <!-- サイズ設定エリア -->
     <div class="detailesAreaContents" id="sizeAreaContents" style="display:none;">
       <div id="topArea">
-        <h1>表示サイズ</h1>
+        <h1>サイズ</h1>
         <p>天気ループの表示サイズを変更してください（例: 1.0=標準, 0.8=縮小, 1.5=拡大）</p>
       </div>
       <div class="td_list">
@@ -96,7 +96,7 @@
     <!-- タイマー設定エリア -->
     <div class="detailesAreaContents" id="timerAreaContents" style="display:none;">
       <div id="topArea">
-        <h1>タイマー設定</h1>
+        <h1>タイマー</h1>
         <p>天気ループの表示・非表示の時間を設定してください</p>
       </div>
       <div class="td_list timerContents">
